2005-11-14  Srinivasa Ragavan <sragavan@novell.com>

	* Makefile.am: Added two ui files evolution-editor.xml
	and evolution-event-editor.xml.

2005-11-10  Sankar P  <psankar@novell.com>

	* evolution-mail-message.xml: added keyboard accelerators for 
	NextMessage and PreviousMessage.
	Fixes #302974

2005-10-19 Harish Krishnaswamy <kharish@novell.com>

	Committing for Nathan Owens <pianocomp81@yahoo.com>

	* evolution-memos.xml: added menus for memos component
	* Makefile.am: added evolution-memos.xml to build files

2005-10-18  Srinivasa Ragavan <sragavan@novell.com>

	* evolution-mail-global.xml: Added a keybinding to focus search bar
	entry

2005-10-06  Srinivasa Ragavan <sragavan@novell.com>

	* evolution-addressbook.xml: Change preview pane to Contact Preview.
	* evolution-mail-global.xml: 
	* evolution-tasks.xml: Add task show/hide preview toggle button.

	Make C+S+V as the short cut for show/hide preview uniformly, across 
	evolution.
	
2005-09-24  Andre Klapper  <a9016009@gmx.de>
	* evolution-message-composer.xml: changing the order of the
	main menu items due to HIG (#308614)

2005-09-23  S.Antony Vincent Pandian <santony@gmail.com>

	* evolution.xml: Have added the "View Status Bar" under the "View" menu
	This is a toggle button to hide/show the status bar

2005-08-26  Andre Klapper  <a9016009@gmx.de>
	* evolution-mail-list.xml: Fixing mnemonic conflict (#314351)

2005-08-17  Rodney Dawes  <dobey@novell.com>

	* evolution-mail-global.xml: Remove the MailPost command
	* evolution-mail-message.xml: Move the MailPost command to here
	Add a menu item for the MailPost command (#312225)
	
	* evolution-mail-list.xml: Add a menu item for the EditSelectThread
	command	(#306878)
	
	Fixes #306878 and #312225

2005-08-07  Rodney Dawes  <dobey@novell.com>

	* evolution-mail-global.xml: Fix the tooltip for the
	Edit->Search Folders menu item to say "Search Folders" as well

	* evolution-mail-message.xml: Fix the tooltips and text for the menu