@@ -1,3 +1,11 @@
+2005-11-16  Chenthill Palanisamy  <pchenthill@novell.com>
+
+	* evolution-event-editor.xml: Removed the view attendee
+	from menu bar and corrected the recurrence spelling.
+	* Makefile.am:
+	* evolution-task-editor.xml: Added the file for task
+	editor.
+
 2005-11-14  Srinivasa Ragavan <sragavan@novell.com>
 
 	* Makefile.am: Added two ui files evolution-editor.xml
